--- a/app/package.json
+++ b/app/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "app",
-  "version": "0.0.0",
-  "private": true,
+  "name": "mimic-speech",
+  "version": "1.0.0",
+  "description": "app to mimic speech in bahasa indonesia",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "lint": "eslint ."
+    "setup": "npm install && mkdir generate upload",
+    "start": "node server.js"
   },
+  "author": "Prabagita Ivan",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "dotenv": "^6.1.0",
-    "express": "~4.16.0",
-    "mongoose": "^5.3.11",
-    "morgan": "~1.9.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "formidable": "^1.2.1",
+    "mongoose": "^5.3.14",
+    "recordrtc": "^5.4.8",
+    "wav-decoder": "^1.3.0",
+    "wav-encoder": "^1.3.0"
   }
 }
