--- a/data-gathering/package.json
+++ b/data-gathering/package.json
@@ -4,7 +4,7 @@
   "description": "app to gather data for mimic speech",
   "main": "server.js",
   "scripts": {
-    "setup": "npm install && mkdir data && cd data && mkdir data1 data2 data3 data4 data5 data6 data7 data8 data9",
+    "setup": "npm install && mkdir data && cd data && mkdir data1 data2 data3 data4 data5",
     "start": "node server.js"
   },
   "author": "Prabagita Ivan",
