Updated Chapter 5.1 and some 6.2
- Updated phoneme to syllable in code
- Added information to Mimic Home
- Added unknown label

--- a/mimic-app/package.json
+++ b/mimic-app/package.json
@@ -4,7 +4,7 @@
   "description": "app to mimic speech in bahasa indonesia",
   "main": "server.js",
   "scripts": {
-    "setup": "npm install && mkdir data && cd data && mkdir collect speech generate train && cd collect && mkdir a i t na ma mu di ri ku kan && cd ../train && mkdir model",
+    "setup": "npm install && mkdir data && cd data && mkdir collect speech generate train && cd collect && mkdir a i t na ma mu di ri ku kan unknown && cd ../train && mkdir model",
     "start": "node server.js",
     "train": "node app/train/train.js"
   },
