--- a/mimic-app/package.json
+++ b/mimic-app/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^0.1.21",
     "crypto-random-string": "^1.0.0",
+    "dct": "0.0.3",
+    "fft-js": "0.0.11",
     "formidable": "^1.2.1",
-    "fourier-transform": "^1.1.2",
     "mongoose": "^5.3.14",
-    "node-mfcc": "0.0.2",
     "node-wav": "0.0.2",
     "recordrtc": "^5.4.8",
     "shuffle-array": "^1.0.1"
